@@ -1,3 +1,6 @@
+* Now Sale Line Tree view in Sale form view is sale_line_view_tree_sequence view
+* Add discount field in sale_line_view_tree view
+
 Version 2.1.1 - 2012-01-26
 * Point release
 
